<resources>
    <string name="app_name">TrackingGoals</string>

    <string name="menu_diary">Diary</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_motivation">Motivation</string>

    <string name="textView_note">New note</string>

    <string name="editText_incoming">The idea,thought,key event,etc</string>

    <string name="alert_dialog_exit_title">Quit without saving?</string>
    <string name="alert_dialog_exit_text">There is no text to save. You will loose your other data.</string>
    <string name="alert_dialog_action_exit">Quit</string>
    <string name="alert_dialog_action_return">Go back</string>

    <string name="alert_dialog_delete_title">Remove the note?</string>
    <string name="alert_dialog_delete_text">Are you sure? You won`t be able to restore it.</string>
    <string name="alert_dialog_action_yes">Yes</string>
    <string name="alert_dialog_action_no">No</string>

    <string name="alert_dialog_complete_title">Complete without saving?</string>
    <string name="alert_dialog_complete_text">Wish text and quantity are not entered. The data will not be saved.</string>
    <string name="alert_dialog_complete_action_complete">Complete</string>
    <string name="alert_dialog_complete_action_return">Go back</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string-array name="month">
        <item>@string/january</item>
        <item>@string/february</item>
        <item>@string/march</item>
        <item>@string/april</item>
        <item>@string/may</item>
        <item>@string/june</item>
        <item>@string/july</item>
        <item>@string/august</item>
        <item>@string/september</item>
        <item>@string/october</item>
        <item>@string/november</item>
        <item>@string/december</item>
    </string-array>

    <string name="rub">rub</string>
    <string name="dollar">dollars</string>
    <string name="client">clients</string>
    <string name="users">users</string>
    <string name="subscribers">subscribers</string>
    <string name="orders">orders</string>
    <string name="units">units</string>
    <string name="times">times</string>
    <string name="days">days</string>
    <string name="kilogram">kilogram</string>
    <string name="books">books</string>

    <string-array name="unit">
        <item>@string/rub</item>
        <item>@string/dollar</item>
        <item>@string/client</item>
        <item>@string/users</item>
        <item>@string/subscribers</item>
        <item>@string/orders</item>
        <item>@string/units</item>
        <item>@string/times</item>
        <item>@string/days</item>
        <item>@string/kilogram</item>
        <item>@string/books</item>
    </string-array>

    <string name="text_goals_reaching_now">Active</string>
    <string name="text_goals_achieved">Achieved</string>
    <string name="add_goals_content_description">Add new goals</string>
    <string name="button_constructor_start">Begin</string>
    <string name="textView_constructor_title">Goal creator</string>
    <string name="textView_constructor_description">This is your powerful tool for achieving any goal. Create your goal, realize it and monitor your progress!</string>

    <string name="textView_goals_first">Goal creator</string>
    <string name="textView_goals_title">What do you want?</string>
    <string name="textView_goals_description">Write a wish that inspires you, and add a picture. Write, even if you don`t know how to achieve it yet.</string>
    <string name="hint_goals_quantity">100</string>
    <string name="hint_goalsStep_open_list">Open list</string>
    <string name="hint_goals_description_goals">Formulate your wish and write it down</string>
    <string name="hint_goals_description_criterion">Read, accumulated, done, learned</string>
    <string name="button_goals_choosePic">Choose a picture</string>
    <string name="button_goals_next">Finish creation</string>
    <string name="textView_goals_title_second">When do you expect to achieve it</string>
    <string name="textView_goals_description_second">The recommended time frame is 3 months to 3 years. After all, you don`t want it by old age, but now, do you?</string>
    <string name="textView_goals_data">CHOOSE A DATE</string>
    <string name="textView_goals_result">How can you measure the result?</string>
    <string name="textView_goals_result_description">Measurements are needed to track the process. In what can it be counted?</string>
    <string name="editText_goals_want">HOW MUCH I WANT</string>
    <string name="editText_goals_quantity">UNIT OF MEASURE</string>
    <string name="editText_goals_criterion">DESCRIPTION OF CRITERIA</string>

    <string name="photo_choose">Choose from</string>
    <string name="photo_load">Uploads yours</string>
    <string name="photo_create">Make a picture</string>

    <string-array name="picture">
        <item>@string/photo_choose</item>
        <item>@string/photo_load</item>
    </string-array>

    <string name="textView_bottom_sheet_goals_edit">Редактировать</string>
    <string name="textView_bottom_sheet_goals_accomplished">Цель достигнута</string>
    <string name="textView_bottom_sheet_goals_remove">Удалить цель</string>

    <string name="popupmenu_goals_edit">Edit goals</string>
    <string name="popupmenu_goals_accomplished">Change the status of execution goals</string>
    <string name="popupmenu_goals_remove">Remove the goal</string>

    <string name="hint_custom_fragment">Enter the quantity</string>
    <string name="title_custom_fragment">How much was added or subtracted?</string>
    <string name="custom_fragment_action_confirm">confirm</string>

    <string name="empty_value">You did not enter the text</string>
    <string name="invalid_value">Enter + or - in front of the number</string>

    <string name="textView_incoming_title">Incoming</string>
    <string name="textView_incoming_goals">Related to the goal:</string>
    <string name="textView_Goals_Quantity_Now_Null">0</string>
    <string name="textView_Goals_Quantity_Of">from</string>
    <string name="btn_toolbar_note_list">Select date</string>
    <string name="please_wait">please_wait</string>
    <string name="textView_motivation">The next affirmation will be tomorrow</string>

    <string name="text_new_result">A new result to the goal</string>
    <string name="text_today">Today</string>

    <string name="error_network">You are offline! </string>

</resources>