<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/frameTopGoals"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/background_menu">

        <ImageButton
            android:id="@+id/imageButtonBackGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/background_menu"
            app:srcCompat="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textViewGoalsTitleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="center"
            android:background="@color/background_menu"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/textView_goals_first"
            android:textAllCaps="false"
            android:textColor="@color/text_toolbar"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEndStepFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="25dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStartStepFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="25dp" />

            <TextView
                android:id="@+id/textViewGoalsTitle"
                style="@style/TextViewTitle"
                android:text="@string/textView_goals_title"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewGoalsDescription"
                style="@style/TextViewDescription"
                android:lines="3"
                android:minLines="3"
                android:text="@string/textView_goals_description"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsTitle" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewGoalsStepFirst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/background_card"
                app:cardCornerRadius="11dp"
                app:cardElevation="4dp"

                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsDescription">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <FrameLayout
                        android:id="@+id/frameImageGoalsConstructor"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageViewGoalsPicture"
                            android:layout_width="match_parent"
                            android:layout_height="185dp"
                            android:scaleType="centerCrop"
                            tools:ignore="ContentDescription" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonGoalsChoosePic"
                            style="?attr/materialButtonOutlinedStyle"
                            android:clickable="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/background_card"
                            android:fontFamily="sans-serif-medium"
                            android:padding="10dp"
                            android:text="@string/button_goals_choosePic"
                            android:textAllCaps="false"
                            android:textColor="@color/text_blue"
                            android:textSize="14sp"
                            android:visibility="visible" />


                    </FrameLayout>

                    <View
                        android:id="@+id/bottomDivider"
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="#d9d9d9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/frameImageGoalsConstructor" />

                    <FrameLayout
                        android:id="@+id/frameGoalsInside"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/frameImageGoalsConstructor">


                        <EditText
                            android:id="@+id/editTextInputTextGoals"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/background_card"
                            android:fontFamily="sans-serif-medium"
                            android:hint="@string/hint_goals_description_goals"
                            android:inputType="textMultiLine|textCapWords"
                            android:imeOptions="actionDone"
                            android:textSize="20sp"
                            android:importantForAutofill="no" />

                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/textViewGoalsTitleSecond"
                style="@style/TextViewTitle"
                android:text="@string/textView_goals_title_second"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/cardViewGoalsStepFirst" />

            <TextView
                android:id="@+id/textViewGoalsDescriptionSecond"
                style="@style/TextViewDescription"
                android:lines="2"
                android:minLines="2"
                android:text="@string/textView_goals_description_second"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsTitleSecond" />


            <TextView
                android:id="@+id/textViewGoalsData"
                style="@style/TextViewTitleSmall"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/textView_goals_data"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoalsChooseDat"
                app:layout_constraintStart_toStartOf="@+id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsDescriptionSecond" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoalsChooseDat"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/background_card"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="textStart"
                android:textColor="@color/text_grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEndStepFirst"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsData"
                app:strokeColor="@color/grey_light"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewGoalsResult"
                style="@style/TextViewTitle"
                android:text="@string/textView_goals_result"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/buttonGoalsChooseDat" />


            <TextView
                android:id="@+id/textViewGoalsResultDescription"
                style="@style/TextViewDescription"
                android:lines="2"
                android:minLines="2"
                android:text="@string/textView_goals_result_description"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsResult" />

            <TextView
                android:id="@+id/textViewGoalsWant"
                style="@style/TextViewTitleSmall"
                android:layout_marginTop="8dp"
                android:text="@string/editText_goals_want"
                app:layout_constraintBottom_toTopOf="@+id/textInputGoalsWant"
                app:layout_constraintStart_toStartOf="@+id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsResultDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputGoalsWant"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxStrokeColor="@color/text_blue"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/background_card"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsWant"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextGoalsWant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/hint_goals_quantity"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="@color/text_grey"
                    android:textColorHint="@color/text_grey_hint_light"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewGoalsQuantity"
                style="@style/TextViewTitleSmall"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:text="@string/editText_goals_quantity"
                app:layout_constraintBottom_toTopOf="@+id/textInputGoalsQuantity"
                app:layout_constraintStart_toStartOf="@+id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textInputGoalsWant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputGoalsQuantity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxStrokeColor="@color/text_blue"
                app:boxBackgroundColor="@color/background_card"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsQuantity"
                app:layout_constraintVertical_chainStyle="packed">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextGoalsUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/hint_goalsStep_open_list"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/text_grey"
                    android:textColorHint="@color/text_grey_hint_light"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewGoalsCriterion"
                style="@style/TextViewTitleSmall"
                android:layout_marginTop="10dp"
                android:text="@string/editText_goals_criterion"
                app:layout_constraintBottom_toTopOf="@+id/textInputGoalsCriterion"
                app:layout_constraintStart_toStartOf="@+id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textInputGoalsQuantity" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputGoalsCriterion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextInputLayoutAppearance"
                app:boxStrokeColor="@color/text_blue"
                app:boxBackgroundColor="@color/background_card"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoalsCriterion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextGoalsCriterion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/hint_goals_description_criterion"
                    android:imeOptions="actionDone"
                    android:inputType="text|textCapWords"
                    android:lines="1"
                    android:textColor="@color/text_grey"
                    android:textColorHint="@color/text_grey_hint_light"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoalsFinishEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button_goals_next"
                android:backgroundTint="@color/text_blue"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guidelineEndStepFirst"
                app:layout_constraintStart_toStartOf="@id/guidelineStartStepFirst"
                app:layout_constraintTop_toBottomOf="@+id/textInputGoalsCriterion" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>