<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_bottom_sheet_goals_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="10dp"
                android:shadowRadius="1"
                android:text="@string/textView_bottom_sheet_goals_edit"
                android:textColor="@color/text_blue"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textView_bottom_sheet_goals_accomplished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="10dp"
                android:shadowRadius="1"
                android:text="@string/textView_bottom_sheet_goals_accomplished"
                android:textColor="@color/text_blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_bottom_sheet_goals_remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/textView_bottom_sheet_goals_remove"
                android:textColor="@color/text_blue"
                android:textSize="18sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/textView_sheet_goals_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/textView_bottom_sheet_goals_cancel"
            android:textColor="@color/text_blue"
            android:textSize="18sp" />
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>