<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:background="@color/background"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarConstructorGoals"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/background_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start">

                <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/buttonToolbarConstructorGoals"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/background_menu"
                    android:fontFamily="sans-serif-black"
                    android:includeFontPadding="false"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/text_goals_reaching_now"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/imageViewToolbarConstructorGoals"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_drop_down" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textViewConstructorGoalsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/textView_constructor_title"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarConstructorGoals"
            tools:layout_editor_absoluteX="88dp" />

        <TextView
            android:id="@+id/textViewConstructorGoalsDescription"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:lines="5"
            android:minLines="5"
            android:text="@string/textView_constructor_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewConstructorGoalsTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConstructorGoalsStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/text_blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/button_constructor_start"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewConstructorGoalsDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>